midpoint-live-demo/base/kubernetes-objects/odoo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-deployment
  labels:
    app: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
      - name: odoo
        image: odoo:16.0
        ports:
        - containerPort: 8069
        volumeMounts:
          - name: odoo-conf
            mountPath: /etc/odoo/
      volumes:
        - name: odoo-conf
          configMap:
            name: odoo.conf
            defaultMode: 0555
