midpoint-live-demo/base/kubernetes-objects/odoo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo-ingress
  annotations: 
    kubernetes.io/ingress.class: azure/application-gateway    
spec:
#  ingressClassName: haproxy
  tls:
    - hosts:
        - odoo.domain
      secretName: cert-mp-demo
  rules:
    - host: odoo.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo-service
                port:
                  number: 8069
